# Finops

./: .gitignore  Dockerfile  MANIFEST.in  README.md  env.py  inference.py  main.py  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  run_baseline.py  test_env.py  test_task_load.py
graders/: graders.py
scenarios/: easy_001.json  hard_001.json  medium_001.json
schemas/: models.py
server/: app.py
