[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finops-env"
version = "1.0.0"
description = "A FinOps agent environment that simulates cloud infrastructure cost optimization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["graders", "schemas"]
